# black_lock

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  release.yml
cmake/: copy_if_absent.cmake
docs/: 软件开发设计文档.md
src/: app.h  app.manifest  app.rc  autostart.c  autostart.h  config.c  config.default.ini  config.h  hotkey.c  hotkey.h  keyhook.c  keyhook.h  lockwin.c  lockwin.h  main.c  tray.c  tray.h  util.c  util.h
tests/: test_config.c
